apply formatting, optimize import

--- a/android-basics-kotlin-cupcake-app-starter/app/src/main/res/layout/fragment_summary.xml
+++ b/android-basics-kotlin-cupcake-app-starter/app/src/main/res/layout/fragment_summary.xml
@@ -148,8 +148,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_between_elements"
                 android:text="@string/cancel"
-                android:onClick="@{()->summaryFragment.cancelOrder()}"
-                />
+                android:onClick="@{()->summaryFragment.cancelOrder()}" />
 
         </LinearLayout>
     </ScrollView>
