--- a/android-basics-kotlin-cupcake-app-starter/app/src/main/res/layout/fragment_flavor.xml
+++ b/android-basics-kotlin-cupcake-app-starter/app/src/main/res/layout/fragment_flavor.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
      Copyright (C) 2020 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -19,10 +18,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".FlavorFragment">
+
     <data>
+
         <variable
             name="viewModel"
             type="com.example.cupcake.model.OrderViewModel" />
+
         <variable
             name="flavorFragment"
             type="com.example.cupcake.FlavorFragment" />
@@ -117,8 +119,7 @@
                 android:onClick="@{()->flavorFragment.cancelOrder()}"
                 app:layout_constraintEnd_toStartOf="@id/next_button"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/next_button"
-                />
+                app:layout_constraintTop_toTopOf="@id/next_button" />
 
             <Button
                 android:id="@+id/next_button"
