--- a/android-basics-kotlin-cupcake-app-starter/app/src/main/res/layout/fragment_pickup.xml
+++ b/android-basics-kotlin-cupcake-app-starter/app/src/main/res/layout/fragment_pickup.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
      Copyright (C) 2020 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -21,9 +20,11 @@
     tools:context=".PickupFragment">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.example.cupcake.model.OrderViewModel" />
+
         <variable
             name="pickupFragment"
             type="com.example.cupcake.PickupFragment" />
@@ -115,8 +116,7 @@
                 android:onClick="@{()->pickupFragment.cancelOrder()}"
                 app:layout_constraintEnd_toStartOf="@id/next_button"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/next_button"
-                />
+                app:layout_constraintTop_toTopOf="@id/next_button" />
 
             <Button
                 android:id="@+id/next_button"
